<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/Royal_blue"
        android:textStyle="bold"
        android:text="将我当前位置设置为提醒"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <RadioButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:text="@string/start"
            android:textSize="16dp"/>

        <RadioButton
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:text="@string/end"
            android:textSize="16dp"/>
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/Royal_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_hint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/brown"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="12dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station_exit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/brown"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/exit_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/cancle_btn"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/save_btn"
            android:textSize="16dp"/>

    </LinearLayout>


</LinearLayout>
